typescript/checker/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithProtecteds.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            154,
        ),
        hi: BytePos(
            155,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithProtecteds.ts:13:5
   |
13 | var i: I2;
   |     ^

